# encinitas-collector

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/2024-01-03-064442_create_events_table/: up.sql
migrations/2024-01-03-064556_create_requests_table/: up.sql
migrations/2024-01-03-064652_create_responses_table/: up.sql
src/: config.rs  main.rs  schema.rs
src/domain/: mod.rs
src/domain/aggregates/: event.rs  metrics.rs
src/domain/services/: events_creator.rs  events_processor.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/http/handlers/: capture.rs  metrics.rs  mod.rs
src/infrastructure/redis/: mod.rs
src/infrastructure/redis/consumers/: events.rs
src/infrastructure/redis/producers/: events.rs
src/infrastructure/repositories/: influx.rs  mod.rs  redis.rs  sql.rs  sql_models.rs
