[package]
name = "encinitas-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
influxdb = "0.7.1"
chrono = "0.4.31"
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres", "serde_json", "r2d2", "uuid"] }
r2d2 = "0.8.10"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
actix-cors = "0.6.5"
redis = "0.24.0"
r2d2_redis = "0.14.0"
